force-app/main/default/objects/Nomenclador_de_Prestacion__c/Nomenclador_de_Prestacion__c.object-meta.xml
<CustomObject>
    <label>Nomenclador de Prestación</label>
    <nameField>
        <label>Código Nomenclador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nomenclador de Prestaciónes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>