force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Agrupacion_Nomenclador__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion_Nomenclador__c</fullName>
    <label>Agrupación Nomenclador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>