force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Busqueda__c.field-meta.xml
<CustomField>
    <fullName>Busqueda__c</fullName>
    <defaultValue>&quot;****&quot;</defaultValue>
    <description>Se utilizar para la busqueda de registros</description>
    <label>Busqueda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>