force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Cdigo_PMO__c.field-meta.xml
<CustomField>
    <fullName>Cdigo_PMO__c</fullName>
    <label>Código PMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>