force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <externalId>true</externalId>
    <label>Código id externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>