force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Criterios_para_Autorizacion__c.field-meta.xml
<CustomField>
    <fullName>Criterios_para_Autorizacion__c</fullName>
    <label>Criterios para Autorización</label>
    <length>36000</length>
    <type>LongTextArea</type>
</CustomField>