force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Descripcion_tipo_nomenclador__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_tipo_nomenclador__c</fullName>
    <label>Descripción tipo nomenclador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>