force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Edad_minima__c.field-meta.xml
<CustomField>
    <fullName>Edad_minima__c</fullName>
    <label>Edad mínima</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>