force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Nivel_de_Complejidad__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Complejidad__c</fullName>
    <label>Nivel de Complejidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>