force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Nombre_Agrupacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Agrupacion__c</fullName>
    <label>Nombre Agrupacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>