force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Nombre_prestacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_prestacion__c</fullName>
    <label>Nombre Prestacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>