force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>36000</length>
    <type>LongTextArea</type>
</CustomField>