force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/On_Line__c.field-meta.xml
<CustomField>
    <fullName>On_Line__c</fullName>
    <label>On Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verdadero</fullName>
            </value>
            <value>
                <fullName>Falso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>