force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Prestacion__c.field-meta.xml
<CustomField>
    <fullName>Prestacion__c</fullName>
    <externalId>true</externalId>
    <label>Prestacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>