force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Prestacion_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Prestacion_Anterior__c</fullName>
    <label>Prestación Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>