force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Requiere_AP__c.field-meta.xml
<CustomField>
    <fullName>Requiere_AP__c</fullName>
    <label>Requiere AP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>