force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Requisitos_Administrativos__c.field-meta.xml
<CustomField>
    <fullName>Requisitos_Administrativos__c</fullName>
    <label>Requisitos Administrativos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>