force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Sexo_permitido__c.field-meta.xml
<CustomField>
    <fullName>Sexo_permitido__c</fullName>
    <label>Sexo permitido</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambos</fullName>
            </value>
            <value>
                <fullName>Femenino</fullName>
            </value>
            <value>
                <fullName>Masculino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>