force-app/main/default/objects/Nomenclador_de_Prestacion__c/fields/Tipo_Nomenclador__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Nomenclador__c</fullName>
    <label>Tipo Nomenclador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>