force-app/main/default/objects/Nomenclador_de_Prestacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Prestacion__c</columns>
    <columns>NAME</columns>
    <columns>Nombre_prestacion__c</columns>
    <columns>On_Line__c</columns>
    <columns>Nivel_de_Complejidad__c</columns>
    <columns>Descripcion__c</columns>
    <columns>Descripcion_tipo_nomenclador__c</columns>
    <columns>Cdigo_PMO__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Nomenclador__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>